building-secure-cluster/configuring-network-policies/allow-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-allow-all
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx
      role: web
  ingress:
  - {}
