building-secure-cluster/configuring-network-policies/allow-from-all-ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: test
  name: allow-all-namespaces
spec:
  podSelector:
    matchLabels:
      app: nginx
      role: web
  ingress:
  - from:
    - namespaceSelector: {}
