building-secure-cluster/configuring-network-policies/test-deny-specific.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: test-deny-specific
  namespace: test
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app: client
  egress: []
